@@ -70,7 +70,8 @@
                     <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
                     <compilerArgs>
-                        <arg>-parameters</arg>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.compiler</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
